--- a/Convenience_POS_System/src/main/resources/templates/mainpage.html
+++ b/Convenience_POS_System/src/main/resources/templates/mainpage.html
@@ -40,7 +40,12 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-collection"></i></div>
-                                <h2 class="fs-4 fw-bold">계산하기</h2>
+                                <th:block th:if="${session.loginMember eq null}">
+                                    <h2 class="fs-4 fw-bold">계산하기</h2>
+                                </th:block>
+                                <th:block th:unless="${session.loginMember eq null}">
+                                    <a th:href="@{/sale}"><h2 class="fs-4 fw-bold">계산하기</h2></a>
+                                </th:block>
                                 <p class="mb-0">With Bootstrap 5, we've created a fresh new layout for this template!</p>
                             </div>
                         </div>
